fix: loadscreen heights on all pages are completed as best as currently possible (review individual pages and often artist pages as well will vary in height so can't get an exact load height - could eventually fix this with a second animation that makes the loadscreen container go to hidden after the animation completes) | TEST fix: spotify iframe heights on mobile issue test fix with forced height value under 550px

--- a/reviews/reviews.css
+++ b/reviews/reviews.css
@@ -247,12 +247,12 @@ header {
           top: 0;
       }
           /*MOBILE*/
-          @media screen and (max-width: 850px){
-          #loadcontainer {height: calc(2.5rem + 1000px + 4rem);} /*header plus main plus footer - 2rem high internals + 2rem high socials*/
+          @media screen and (max-width: 768px){
+          #loadcontainer {height: calc(32.32rem + 60vw);} /* OLD height: calc(2.5rem + 1000px + 4rem) header plus main plus footer - 2rem high internals + 2rem high socials*/
           }                                
           /*DESKTOP*/
-          @media screen and (min-width: 850px){
-          #loadcontainer {height: calc(2.5rem + 1000px + 2rem);} /*header plus main plus footer - 2rem high internals/socials */
+          @media screen and (min-width: 768px){
+          #loadcontainer {height: calc(26rem + 40vw);} /*header plus main plus footer - 2rem high internals/socials */
           }
       .loadscreen {
           width: 100%;
